Fixes more compatibility issues